--- a/config.html
+++ b/config.html
@@ -81,7 +81,7 @@
 </head>
 <body>
 
-	<div id="nav"><a href="dashboard.html">&lt; dashboard</a></div>
+	<div id="nav"><a href="index.html">&lt; dashboard</a></div>
 	<div id="content" align="center">
 		<form id="form"></form>
 	</div>
