--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -5,6 +5,8 @@
 	<link rel="apple-touch-icon" sizes="72x72" href="apple-touch-icon-ipad.png" />
 	<link rel="apple-touch-icon" sizes="114x114" href="apple-touch-icon-iphone4.png" />
 
+	<meta name="apple-mobile-web-app-capable" content="yes" />
+
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta name="viewport" content = "height = device-height, width = 420, user-scalable = no" /> 
 	<title>* * GardenPi * *</title>
