Ajout de logs - install de flot

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -125,6 +125,6 @@
 		<div class="bottom left" id="brum"></div>
 		<div class="bottom right" id="pump"></div>
 		</div>
-		<div id="nav"><a href="config.html">config</a> <a href="GardenPy_Logs.txt">logs</a></div>
+		<div id="nav"><a href="config.html">config</a> <a href="logs.html">logs</a></div>
 </body>
 </html>
