--- a/htdocs/logs.html
+++ b/htdocs/logs.html
@@ -8,14 +8,11 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<!-- <meta name="viewport" content = "height = device-height, width = 420, user-scalable = no" />  -->
 	<title>* * GardenPi * *</title>
-	<!-- <script type="text/javascript" src="/webiopi.js"></script> -->
-<!-- 	<link href="flot/examples/examples.css" rel="stylesheet" type="text/css">
- -->
-	<script language="javascript" type="text/javascript" src="flot/jquery.js"></script>
-	<script language="javascript" type="text/javascript" src="flot/jquery.flot.js"></script>
-	<script language="javascript" type="text/javascript" src="flot/jquery.flot.time.js"></script>
-	<script type="text/javascript">
 
+	<script language="javascript" type="text/javascript" src="flot-master/jquery.js"></script>
+	<script language="javascript" type="text/javascript" src="flot-master/jquery.flot.js"></script>
+	<script language="javascript" type="text/javascript" src="flot-master/jquery.flot.time.js"></script>
+	<script type="text/javascript">
 
 	$(function() {
 			console.log('plop')
