--- a/htdocs/logs.html
+++ b/htdocs/logs.html
@@ -12,6 +12,7 @@
 	<script language="javascript" type="text/javascript" src="flot-master/jquery.js"></script>
 	<script language="javascript" type="text/javascript" src="flot-master/jquery.flot.js"></script>
 	<script language="javascript" type="text/javascript" src="flot-master/jquery.flot.time.js"></script>
+	<script language="javascript" type="text/javascript" src="flot-master/jquery.flot.selection.js"></script>
 	<script type="text/javascript">
 
 	$(function() {
@@ -52,7 +53,7 @@
 				if (line[7]=='True') d7.push([theTime, 30]); // Humidification
 			});
 		
-		$.plot("#placeholder",  [{
+		var completeData = [{
 			data: d2,
 			lines: { show: true },
 			label: "Température"
@@ -77,11 +78,43 @@
 			data: d7,
 			points: { show: true },
 			label:"Humidification"
+		}];
+
+		var options = {
+			grid: {   markings:  d1},
+			xaxis: { mode: "time" },
+			selection: { mode: "x" }
+		};
+
+		var plot = $.plot("#placeholder",  completeData, options);
+
+		var overview = $.plot("#overview",  [{
+			data: d2,
+			lines: { show: true },
+			label: "Température"
+		}, {
+			data: d3,
+			lines: { show: true },
+			label:"Humidité"
 		}], {
 			grid: {   markings:  d1},
-			xaxis: { mode: "time" }
+			xaxis: { mode: "time" },
+			selection: { mode: "x" }
 		});
-				console.log('done')
+
+		$("#overview").bind("plotselected", function (event, ranges) {
+
+			plot = $.plot("#placeholder", completeData,
+				$.extend(true, {}, options, {
+					xaxis: { min: ranges.xaxis.from, max: ranges.xaxis.to },
+				})
+			);
+
+			// don't fire event on the overview to prevent eternal loop
+
+			overview.setSelection(ranges, true);
+		});
+
     	});
 	});
 
@@ -131,9 +164,16 @@
 		}
 		.demo-placeholder {
 			width: 100%;
-			height: 100%;
+			height: 75%;
 			font-size: 14px;
 			line-height: 1.2em;
+		}
+
+		.demo-overview {
+			width: 100%;
+			height: 25%;
+			font-size: 14px;
+			line-height: 1.2em;			
 		}
 
 	</style>
@@ -142,6 +182,8 @@
 	<div id="content" align="center">
 		<div class="demo-container">
 			<div id="placeholder" class="demo-placeholder"></div>
+			<div id="overview" class="demo-overview"></div>
+
 		</div>
 	</div>
 	<div id="nav"><a href="index.html">Dashboard</a> <a href="config.html">config</a></div>
